syntax = "proto3";
option java_package = "com.example.kafkaprotobuf";
option java_multiple_files = true;

message Person {
  string name = 1;
  int32 age = 2;
  string email = 3;
  Address address = 4;
  repeated PhoneNumber phone_numbers = 5;
  bool is_student = 6;
  repeated int32 grades = 7;
}

message Address {
  string street = 1;
  string city = 2;
  string state = 3;
  string zip_code = 4;
}

message PhoneNumber {
  enum Type {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }
  string number = 1;
  Type type = 2;
}
